// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`C: trivial: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 undefined";
id="node1";
shape="box";
fillcolor="lightgray";
minHeight=0.5;
height=0.6;
];
}"
`;

exports[`C: simpleIf: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 undefined";
id="node1";
shape="invhouse";
fillcolor="#48AB30";
height=0.6;
];
    node3 [style="filled";
label="node3 undefined";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node2 [style="filled";
label="node2 undefined";
id="node2";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node1 -> node3 [penwidth=1;
color="green";
];
    node3 -> node2 [penwidth=1;
color="blue";
];
    node1 -> node2 [penwidth=1;
color="red";
];
}"
`;

exports[`C: ifElse: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 undefined";
id="node1";
shape="invhouse";
fillcolor="#48AB30";
height=0.6;
];
    node3 [style="filled";
label="node3 undefined";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node4 [style="filled";
label="node4 undefined";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node2 [style="filled";
label="node2 undefined";
id="node2";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node5 [style="filled";
label="node5 undefined";
id="node5";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node6 [style="filled";
label="node6 undefined";
id="node6";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node1 -> node3 [penwidth=1;
color="green";
];
    node3 -> node2 [penwidth=1;
color="blue";
];
    node4 -> node5 [penwidth=1;
color="green";
];
    node5 -> node2 [penwidth=1;
color="blue";
];
    node4 -> node6 [penwidth=1;
color="red";
];
    node6 -> node2 [penwidth=1;
color="blue";
];
    node1 -> node4 [penwidth=1;
color="red";
];
}"
`;

exports[`C: forever: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node2 [style="filled";
label="node2 undefined";
id="node2";
shape="invhouse";
fillcolor="#48AB30";
height=0.6;
];
    node4 [style="filled";
label="node4 undefined";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node2 -> node4 [penwidth=1;
color="blue";
];
    node4 -> node4 [penwidth=2;
color="blue";
];
}"
`;

exports[`C: forever2: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 undefined";
id="node1";
shape="invhouse";
fillcolor="#48AB30";
height=0.8999999999999999;
];
    node2 [style="filled";
label="node2 undefined";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.8999999999999999;
];
    node1 -> node2 [penwidth=1;
color="blue";
];
    node2 -> node2 [penwidth=2;
color="blue";
];
}"
`;

exports[`C: forLoop: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 undefined";
id="node1";
shape="invhouse";
fillcolor="#48AB30";
height=0.8999999999999999;
];
    node2 [style="filled";
label="node2 undefined";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node6 [style="filled";
label="node6 undefined";
id="node6";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node3 [style="filled";
label="node3 undefined";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.8999999999999999;
];
    node1 -> node2 [penwidth=1;
color="blue";
];
    node2 -> node6 [penwidth=1;
color="red";
];
    node3 -> node2 [penwidth=2;
color="blue";
];
    node2 -> node3 [penwidth=1;
color="green";
];
}"
`;

exports[`C: whileLoop: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 undefined";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node1 [style="filled";
label="node1 undefined";
id="node1";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node2 [style="filled";
label="node2 undefined";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 undefined";
id="node3";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node1 -> node3 [penwidth=1;
color="red";
];
    node2 -> node1 [penwidth=2;
color="blue";
];
    node0 -> node1 [penwidth=1;
color="blue";
];
}"
`;

exports[`C: doWhile: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 undefined";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node1 [style="filled";
label="node1 undefined";
id="node1";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node3 [style="filled";
label="node3 undefined";
id="node3";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node1 -> node3 [penwidth=1;
color="red";
];
    node1 -> node1 [penwidth=2;
color="green";
];
    node0 -> node1 [penwidth=1;
color="blue";
];
}"
`;

exports[`C: gotoA: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 undefined";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node2 [style="filled";
label="node2 undefined";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node4 [style="filled";
label="node4 undefined";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 undefined";
id="node3";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node2 -> node4 [penwidth=1;
color="green";
];
    node2 -> node3 [penwidth=1;
color="red";
];
    node4 -> node2 [penwidth=2;
color="blue";
];
    node0 -> node2 [penwidth=1;
color="blue";
];
}"
`;

exports[`C: switch_1: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 undefined";
id="node1";
shape="invhouse";
fillcolor="#48AB30";
height=0.8999999999999999;
];
    node2 [style="filled";
label="node2 undefined";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 undefined";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node4 [style="filled";
label="node4 undefined";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node5 [style="filled";
label="node5 undefined";
id="node5";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node6 [style="filled";
label="node6 undefined";
id="node6";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node8 [style="filled";
label="node8 undefined";
id="node8";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node2 -> node4 [penwidth=1;
color="blue";
];
    node1 -> node3 [penwidth=1;
color="red";
];
    node3 -> node4 [penwidth=1;
color="green";
];
    node4 -> node6 [penwidth=1;
color="blue";
];
    node3 -> node5 [penwidth=1;
color="red";
];
    node5 -> node6 [penwidth=1;
color="green";
];
    node5 -> node8 [penwidth=1;
color="red";
];
    node6 -> node8 [penwidth=1;
color="blue";
];
}"
`;

exports[`C: switch_2: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 undefined";
id="node1";
shape="invhouse";
fillcolor="#48AB30";
height=0.8999999999999999;
];
    node2 [style="filled";
label="node2 undefined";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 undefined";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node8 [style="filled";
label="node8 undefined";
id="node8";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node4 [style="filled";
label="node4 undefined";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node5 [style="filled";
label="node5 undefined";
id="node5";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node6 [style="filled";
label="node6 undefined";
id="node6";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node1 -> node3 [penwidth=1;
color="red";
];
    node3 -> node4 [penwidth=1;
color="green";
];
    node4 -> node6 [penwidth=1;
color="blue";
];
    node3 -> node5 [penwidth=1;
color="red";
];
    node5 -> node6 [penwidth=1;
color="green";
];
    node5 -> node8 [penwidth=1;
color="red";
];
    node6 -> node8 [penwidth=1;
color="blue";
];
    node2 -> node8 [penwidth=1;
color="blue";
];
}"
`;

exports[`Go: trivial: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 undefined";
id="node1";
shape="box";
fillcolor="lightgray";
minHeight=0.5;
height=0.6;
];
}"
`;

exports[`Go: ifThen: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 undefined";
id="node1";
shape="invhouse";
fillcolor="#48AB30";
height=0.6;
];
    node3 [style="filled";
label="node3 undefined";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node2 [style="filled";
label="node2 undefined";
id="node2";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node1 -> node3 [penwidth=1;
color="green";
];
    node3 -> node2 [penwidth=1;
color="blue";
];
    node1 -> node2 [penwidth=1;
color="red";
];
}"
`;

exports[`Go: Switch: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 undefined";
id="node1";
shape="invhouse";
fillcolor="#48AB30";
height=0.8999999999999999;
];
    node2 [style="filled";
label="node2 undefined";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 undefined";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node10 [style="filled";
label="node10 undefined";
id="node10";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node4 [style="filled";
label="node4 undefined";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node5 [style="filled";
label="node5 undefined";
id="node5";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node6 [style="filled";
label="node6 undefined";
id="node6";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node7 [style="filled";
label="node7 undefined";
id="node7";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node8 [style="filled";
label="node8 undefined";
id="node8";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node2 -> node10 [penwidth=1;
color="blue";
];
    node1 -> node3 [penwidth=1;
color="red";
];
    node3 -> node4 [penwidth=1;
color="green";
];
    node4 -> node10 [penwidth=1;
color="blue";
];
    node3 -> node5 [penwidth=1;
color="red";
];
    node5 -> node6 [penwidth=1;
color="green";
];
    node6 -> node10 [penwidth=1;
color="blue";
];
    node5 -> node7 [penwidth=1;
color="red";
];
    node7 -> node8 [penwidth=1;
color="green";
];
    node8 -> node10 [penwidth=1;
color="blue";
];
    node7 -> node10 [penwidth=1;
color="red";
];
}"
`;

exports[`Go: switchAndLabelsAndGoto: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 undefined";
id="node1";
shape="invhouse";
fillcolor="#48AB30";
height=0.8999999999999999;
];
    node2 [style="filled";
label="node2 undefined";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 undefined";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node5 [style="filled";
label="node5 undefined";
id="node5";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node11 [style="filled";
label="node11 undefined";
id="node11";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node6 [style="filled";
label="node6 undefined";
id="node6";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node7 [style="filled";
label="node7 undefined";
id="node7";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node13 [style="filled";
label="node13 undefined";
id="node13";
shape="box";
fillcolor="lightgray";
height=0.8999999999999999;
];
    node8 [style="filled";
label="node8 undefined";
id="node8";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node15 [style="filled";
label="node15 undefined";
id="node15";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node16 [style="filled";
label="node16 undefined";
id="node16";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node14 [style="filled";
label="node14 undefined";
id="node14";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node1 -> node3 [penwidth=1;
color="red";
];
    node3 -> node5 [penwidth=1;
color="red";
];
    node5 -> node6 [penwidth=1;
color="green";
];
    node5 -> node7 [penwidth=1;
color="red";
];
    node7 -> node8 [penwidth=1;
color="green";
];
    node13 -> node15 [penwidth=1;
color="green";
];
    node15 -> node14 [penwidth=1;
color="blue";
];
    node13 -> node16 [penwidth=1;
color="red";
];
    node16 -> node14 [penwidth=1;
color="blue";
];
    node2 -> node11 [penwidth=1;
color="blue";
];
    node6 -> node11 [penwidth=1;
color="blue";
];
    node8 -> node11 [penwidth=1;
color="blue";
];
    node7 -> node11 [penwidth=1;
color="red";
];
    node3 -> node13 [penwidth=1;
color="green";
];
}"
`;

exports[`Go: trivialReachability: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 undefined";
id="node1";
shape="box";
fillcolor="lightgray";
minHeight=0.5;
height=0.6;
];
}"
`;

exports[`Go: hasFallthrough: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 undefined";
id="node1";
shape="invhouse";
fillcolor="#48AB30";
height=0.8999999999999999;
];
    node2 [style="filled";
label="node2 undefined";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 undefined";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node4 [style="filled";
label="node4 undefined";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node6 [style="filled";
label="node6 undefined";
id="node6";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node2 -> node4 [penwidth=1;
color="blue";
];
    node1 -> node3 [penwidth=1;
color="red";
];
    node3 -> node4 [penwidth=1;
color="green";
];
    node4 -> node6 [penwidth=1;
color="blue";
];
    node3 -> node6 [penwidth=1;
color="red";
];
}"
`;

exports[`Go: forever: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 undefined";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node2 [style="filled";
label="node2 undefined";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node2 -> node2 [penwidth=2;
color="blue";
];
    node0 -> node2 [penwidth=1;
color="blue";
];
}"
`;

exports[`Go: forCond: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 undefined";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node1 [style="filled";
label="node1 undefined";
id="node1";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node2 [style="filled";
label="node2 undefined";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 undefined";
id="node3";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node1 -> node3 [penwidth=1;
color="red";
];
    node2 -> node1 [penwidth=2;
color="blue";
];
    node0 -> node1 [penwidth=1;
color="blue";
];
}"
`;

exports[`Go: forCStyle: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 undefined";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node1 [style="filled";
label="node1 undefined";
id="node1";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node2 [style="filled";
label="node2 undefined";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 undefined";
id="node3";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node1 -> node3 [penwidth=1;
color="red";
];
    node2 -> node1 [penwidth=2;
color="blue";
];
    node0 -> node1 [penwidth=1;
color="blue";
];
}"
`;

exports[`Go: forRange: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 undefined";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node1 [style="filled";
label="node1 undefined";
id="node1";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node2 [style="filled";
label="node2 undefined";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 undefined";
id="node3";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node1 -> node3 [penwidth=1;
color="red";
];
    node2 -> node1 [penwidth=2;
color="blue";
];
    node0 -> node1 [penwidth=1;
color="blue";
];
}"
`;

exports[`Go: typeSwitch: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 undefined";
id="node1";
shape="invhouse";
fillcolor="#48AB30";
height=0.8999999999999999;
];
    node2 [style="filled";
label="node2 undefined";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 undefined";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node6 [style="filled";
label="node6 undefined";
id="node6";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node4 [style="filled";
label="node4 undefined";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node2 -> node6 [penwidth=1;
color="blue";
];
    node1 -> node3 [penwidth=1;
color="red";
];
    node3 -> node4 [penwidth=1;
color="green";
];
    node4 -> node6 [penwidth=1;
color="blue";
];
    node3 -> node6 [penwidth=1;
color="red";
];
}"
`;

exports[`Python: trivial: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node2 [style="filled";
label="node2 2";
id="node2";
shape="box";
fillcolor="lightgray";
minHeight=0.5;
height=0.8999999999999999;
];
}"
`;

exports[`Python: If: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 6";
id="node1";
shape="invhouse";
fillcolor="#48AB30";
height=0.8999999999999999;
];
    node2 [style="filled";
label="node2 8";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node6 [style="filled";
label="node6 8";
id="node6";
shape="house";
fillcolor="#AB3030";
height=0.8999999999999999;
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node2 -> node6 [penwidth=1;
color="blue";
];
    node1 -> node6 [penwidth=1;
color="red";
];
}"
`;

exports[`Python: IfElse: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 12";
id="node1";
shape="invhouse";
fillcolor="#48AB30";
height=0.8999999999999999;
];
    node2 [style="filled";
label="node2 14";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 16";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node7 [style="filled";
label="node7 16";
id="node7";
shape="house";
fillcolor="#AB3030";
height=0.8999999999999999;
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node1 -> node3 [penwidth=1;
color="red";
];
    node2 -> node7 [penwidth=1;
color="blue";
];
    node3 -> node7 [penwidth=1;
color="blue";
];
}"
`;

exports[`Python: IfElifElse: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 20";
id="node1";
shape="invhouse";
fillcolor="#48AB30";
height=0.8999999999999999;
];
    node2 [style="filled";
label="node2 22";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 23";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node4 [style="filled";
label="node4 24";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node5 [style="filled";
label="node5 26";
id="node5";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node9 [style="filled";
label="node9 26";
id="node9";
shape="house";
fillcolor="#AB3030";
height=0.8999999999999999;
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node1 -> node3 [penwidth=1;
color="red";
];
    node3 -> node4 [penwidth=1;
color="green";
];
    node3 -> node5 [penwidth=1;
color="red";
];
    node2 -> node9 [penwidth=1;
color="blue";
];
    node4 -> node9 [penwidth=1;
color="blue";
];
    node5 -> node9 [penwidth=1;
color="blue";
];
}"
`;

exports[`Python: For: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 31";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node3 [style="filled";
label="node3 32";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node1 [style="filled";
label="node1 33";
id="node1";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node4 [style="filled";
label="node4 33";
id="node4";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node3 -> node1 [penwidth=1;
color="green";
];
    node1 -> node3 [penwidth=2;
color="blue";
];
    node0 -> node3 [penwidth=1;
color="blue";
];
    node3 -> node4 [penwidth=1;
color="red";
];
}"
`;

exports[`Python: ForContinue: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 36";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node7 [style="filled";
label="node7 37";
id="node7";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node1 [style="filled";
label="node1 38";
id="node1";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node8 [style="filled";
label="node8 40";
id="node8";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node2 [style="filled";
label="node2 39";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node5 [style="filled";
label="node5 39";
id="node5";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node5 -> node7 [penwidth=2;
color="blue";
];
    node2 -> node7 [penwidth=2;
color="blue";
];
    node0 -> node7 [penwidth=1;
color="blue";
];
    node7 -> node1 [penwidth=1;
color="green";
];
    node7 -> node8 [penwidth=1;
color="red";
];
    node1 -> node5 [penwidth=1;
color="red";
];
}"
`;

exports[`Python: ForBreak: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 43";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node6 [style="filled";
label="node6 44";
id="node6";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node1 [style="filled";
label="node1 45";
id="node1";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node7 [style="filled";
label="node7 46";
id="node7";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node2 [style="filled";
label="node2 46";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 46";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node1 -> node3 [penwidth=1;
color="red";
];
    node3 -> node6 [penwidth=2;
color="blue";
];
    node0 -> node6 [penwidth=1;
color="blue";
];
    node6 -> node1 [penwidth=1;
color="green";
];
    node6 -> node7 [penwidth=1;
color="red";
];
    node2 -> node7 [penwidth=1;
color="blue";
];
}"
`;

exports[`Python: ForElse: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 49";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node4 [style="filled";
label="node4 50";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node1 [style="filled";
label="node1 51";
id="node1";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node2 [style="filled";
label="node2 53";
id="node2";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node4 -> node1 [penwidth=1;
color="green";
];
    node1 -> node4 [penwidth=2;
color="blue";
];
    node4 -> node2 [penwidth=1;
color="red";
];
    node0 -> node4 [penwidth=1;
color="blue";
];
}"
`;

exports[`Python: ForElseBreak: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 56";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node7 [style="filled";
label="node7 57";
id="node7";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node5 [style="filled";
label="node5 61";
id="node5";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node1 [style="filled";
label="node1 58";
id="node1";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node2 [style="filled";
label="node2 59";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 59";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node8 [style="filled";
label="node8 61";
id="node8";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node1 -> node3 [penwidth=1;
color="red";
];
    node3 -> node7 [penwidth=2;
color="blue";
];
    node7 -> node5 [penwidth=1;
color="red";
];
    node0 -> node7 [penwidth=1;
color="blue";
];
    node7 -> node1 [penwidth=1;
color="green";
];
    node5 -> node8 [penwidth=1;
color="blue";
];
    node2 -> node8 [penwidth=1;
color="blue";
];
}"
`;

exports[`Python: ForElseBreakReturn: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 64";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node7 [style="filled";
label="node7 65";
id="node7";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node5 [style="filled";
label="node5 69";
id="node5";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node1 [style="filled";
label="node1 66";
id="node1";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node3 [style="filled";
label="node3 67";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node8 [style="filled";
label="node8 67";
id="node8";
shape="house";
fillcolor="#AB3030";
height=0.8999999999999999;
];
    node1 -> node3 [penwidth=1;
color="red";
];
    node3 -> node7 [penwidth=2;
color="blue";
];
    node7 -> node5 [penwidth=1;
color="red";
];
    node0 -> node7 [penwidth=1;
color="blue";
];
    node7 -> node1 [penwidth=1;
color="green";
];
    node1 -> node8 [penwidth=1;
color="green";
];
}"
`;

exports[`Python: While: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 72";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node1 [style="filled";
label="node1 73";
id="node1";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node2 [style="filled";
label="node2 74";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node4 [style="filled";
label="node4 74";
id="node4";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node2 -> node1 [penwidth=2;
color="blue";
];
    node0 -> node1 [penwidth=1;
color="blue";
];
    node1 -> node4 [penwidth=1;
color="red";
];
}"
`;

exports[`Python: WhileContinue: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 77";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node1 [style="filled";
label="node1 78";
id="node1";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node2 [style="filled";
label="node2 79";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node8 [style="filled";
label="node8 81";
id="node8";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node3 [style="filled";
label="node3 80";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node6 [style="filled";
label="node6 80";
id="node6";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node2 -> node3 [penwidth=1;
color="green";
];
    node6 -> node1 [penwidth=2;
color="blue";
];
    node3 -> node1 [penwidth=2;
color="blue";
];
    node0 -> node1 [penwidth=1;
color="blue";
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node1 -> node8 [penwidth=1;
color="red";
];
    node2 -> node6 [penwidth=1;
color="red";
];
}"
`;

exports[`Python: WhileBreak: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 84";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node1 [style="filled";
label="node1 85";
id="node1";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node2 [style="filled";
label="node2 86";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node7 [style="filled";
label="node7 87";
id="node7";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node3 [style="filled";
label="node3 87";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node4 [style="filled";
label="node4 87";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node2 -> node3 [penwidth=1;
color="green";
];
    node2 -> node4 [penwidth=1;
color="red";
];
    node4 -> node1 [penwidth=2;
color="blue";
];
    node0 -> node1 [penwidth=1;
color="blue";
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node1 -> node7 [penwidth=1;
color="red";
];
    node3 -> node7 [penwidth=1;
color="blue";
];
}"
`;

exports[`Python: WhileElse: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 90";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node1 [style="filled";
label="node1 91";
id="node1";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node2 [style="filled";
label="node2 92";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node5 [style="filled";
label="node5 94";
id="node5";
shape="house";
fillcolor="#AB3030";
height=0.8999999999999999;
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node2 -> node1 [penwidth=2;
color="blue";
];
    node0 -> node1 [penwidth=1;
color="blue";
];
    node1 -> node5 [penwidth=1;
color="red";
];
}"
`;

exports[`Python: WhileElseBreak: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 97";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node1 [style="filled";
label="node1 98";
id="node1";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node7 [style="filled";
label="node7 103";
id="node7";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node2 [style="filled";
label="node2 99";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node3 [style="filled";
label="node3 100";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node9 [style="filled";
label="node9 103";
id="node9";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node6 [style="filled";
label="node6 100";
id="node6";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node2 -> node3 [penwidth=1;
color="green";
];
    node1 -> node7 [penwidth=1;
color="red";
];
    node6 -> node1 [penwidth=2;
color="blue";
];
    node0 -> node1 [penwidth=1;
color="blue";
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node7 -> node9 [penwidth=1;
color="blue";
];
    node3 -> node9 [penwidth=1;
color="blue";
];
    node2 -> node6 [penwidth=1;
color="red";
];
}"
`;

exports[`Python: Match: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 106";
id="node1";
shape="invhouse";
fillcolor="#48AB30";
height=0.6;
];
    node4 [style="filled";
label="node4 109";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node7 [style="filled";
label="node7 111";
id="node7";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node3 [style="filled";
label="node3 109";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node5 [style="filled";
label="node5 111";
id="node5";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node4 -> node3 [penwidth=1;
color="green";
];
    node1 -> node4 [penwidth=1;
color="red";
];
    node1 -> node7 [penwidth=1;
color="red";
];
    node3 -> node7 [penwidth=1;
color="blue";
];
    node5 -> node7 [penwidth=1;
color="blue";
];
    node4 -> node5 [penwidth=1;
color="red";
];
}"
`;

exports[`Python: MatchMultiPattern: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 114";
id="node1";
shape="invhouse";
fillcolor="#48AB30";
height=0.6;
];
    node4 [style="filled";
label="node4 117";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node7 [style="filled";
label="node7 119";
id="node7";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node3 [style="filled";
label="node3 117";
id="node3";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node5 [style="filled";
label="node5 119";
id="node5";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node4 -> node3 [penwidth=1;
color="green";
];
    node1 -> node4 [penwidth=1;
color="red";
];
    node1 -> node7 [penwidth=1;
color="red";
];
    node4 -> node5 [penwidth=1;
color="red";
];
}"
`;

exports[`Python: Return: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node1 [style="filled";
label="node1 122";
id="node1";
shape="invhouse";
fillcolor="#48AB30";
height=0.8999999999999999;
];
    node2 [style="filled";
label="node2 124";
id="node2";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node5 [style="filled";
label="node5 124";
id="node5";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node1 -> node2 [penwidth=1;
color="green";
];
    node1 -> node5 [penwidth=1;
color="red";
];
}"
`;

exports[`Python: WithCluster: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
subgraph cluster_0 {
penwidth=0;
color="white";
bgcolor="#ffddff";
    node3 [style="filled";
label="node3 133";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node4 [style="filled";
label="node4 134";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node7 [style="filled";
label="node7 134";
id="node7";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node3 -> node4 [penwidth=1;
color="green";
];
    node4 -> node7 [penwidth=1;
color="blue";
];
    node3 -> node7 [penwidth=1;
color="red";
];

}subgraph cluster_1 {
penwidth=0;
color="white";
bgcolor="#ffddff";
    node9 [style="filled";
label="node9 137";
id="node9";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}    node2 [style="filled";
label="node2 130";
id="node2";
shape="invhouse";
fillcolor="#48AB30";
height=0.8999999999999999;
];
    node3 [style="filled";
label="node3 133";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node4 [style="filled";
label="node4 134";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node7 [style="filled";
label="node7 134";
id="node7";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node8 [style="filled";
label="node8 136";
id="node8";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node9 [style="filled";
label="node9 137";
id="node9";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node11 [style="filled";
label="node11 138";
id="node11";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node8 -> node9 [penwidth=1;
color="blue";
];
    node7 -> node8 [penwidth=1;
color="blue";
];
    node2 -> node3 [penwidth=1;
color="blue";
];
    node9 -> node11 [penwidth=1;
color="blue";
];
}"
`;

exports[`Python: WithNestedCluster: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
subgraph cluster_0 {
penwidth=0;
color="white";
bgcolor="#ffddff";
    node2 [style="filled";
label="node2 145";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node3 [style="filled";
label="node3 146";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node6 [style="filled";
label="node6 146";
id="node6";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node2 -> node3 [penwidth=1;
color="green";
];
    node3 -> node6 [penwidth=1;
color="blue";
];
    node2 -> node6 [penwidth=1;
color="red";
];

}subgraph cluster_1 {
penwidth=0;
color="white";
bgcolor="#ffddff";
    node8 [style="filled";
label="node8 149";
id="node8";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node9 [style="filled";
label="node9 150";
id="node9";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node16 [style="filled";
label="node16 155";
id="node16";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node17 [style="filled";
label="node17 155";
id="node17";
shape="box";
fillcolor="lightgray";
height=0.3;
];

subgraph cluster_2 {
penwidth=6;
color="white";
bgcolor="#ffddff";
    node10 [style="filled";
label="node10 151";
id="node10";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node11 [style="filled";
label="node11 153";
id="node11";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node13 [style="filled";
label="node13 152";
id="node13";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node12 [style="filled";
label="node12 152";
id="node12";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node14 [style="filled";
label="node14 153";
id="node14";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node10 -> node11 [penwidth=1;
color="red";
];
    node13 -> node12 [penwidth=1;
color="green";
];
    node12 -> node11 [penwidth=1;
color="blue";
];
    node10 -> node13 [penwidth=1;
color="red";
];
    node14 -> node11 [penwidth=1;
color="blue";
];
    node13 -> node14 [penwidth=1;
color="red";
];

}
    node8 -> node9 [penwidth=1;
color="green";
];
    node8 -> node16 [penwidth=1;
color="red";
];

}    node1 [style="filled";
label="node1 143";
id="node1";
shape="invhouse";
fillcolor="#48AB30";
height=0.6;
];
    node2 [style="filled";
label="node2 145";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node3 [style="filled";
label="node3 146";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node6 [style="filled";
label="node6 146";
id="node6";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node7 [style="filled";
label="node7 148";
id="node7";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node8 [style="filled";
label="node8 149";
id="node8";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node9 [style="filled";
label="node9 150";
id="node9";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node16 [style="filled";
label="node16 155";
id="node16";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node10 [style="filled";
label="node10 151";
id="node10";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node11 [style="filled";
label="node11 153";
id="node11";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node13 [style="filled";
label="node13 152";
id="node13";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node17 [style="filled";
label="node17 155";
id="node17";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node12 [style="filled";
label="node12 152";
id="node12";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node19 [style="filled";
label="node19 155";
id="node19";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node14 [style="filled";
label="node14 153";
id="node14";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node9 -> node10 [penwidth=1;
color="blue";
];
    node11 -> node17 [penwidth=1;
color="blue";
];
    node6 -> node7 [penwidth=1;
color="blue";
];
    node17 -> node19 [penwidth=1;
color="blue";
];
    node1 -> node2 [penwidth=1;
color="blue";
];
    node7 -> node8 [penwidth=1;
color="blue";
];
}"
`;

exports[`Python: raise_exception: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 161";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node1 [style="filled";
label="node1 162";
id="node1";
shape="triangle";
fillcolor="#fdd";
height=0.5;
];
    node0 -> node1 [penwidth=1;
color="blue";
];
}"
`;

exports[`Python: raise_again: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
subgraph cluster_0 {
penwidth=0;
color="white";
bgcolor="#ddddff";

subgraph cluster_1 {
penwidth=0;
color="white";
bgcolor="#ddffdd";
    node2 [style="filled";
label="node2 169";
id="node2";
shape="triangle";
fillcolor="#fdd";
height=0.3;
];

}

subgraph cluster_2 {
penwidth=0;
color="white";
bgcolor="#ffdddd";
    node3 [style="filled";
label="node3 171";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node4 [style="filled";
label="node4 172";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node5 [style="filled";
label="node5 172";
id="node5";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 -> node4 [penwidth=1;
color="green";
];
    node4 -> node5 [penwidth=1;
color="blue";
];
    node3 -> node5 [penwidth=1;
color="red";
];

}

}    node0 [style="filled";
label="node0 167";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node2 [style="filled";
label="node2 169";
id="node2";
shape="triangle";
fillcolor="#fdd";
height=0.3;
];
    node3 [style="filled";
label="node3 171";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node4 [style="filled";
label="node4 172";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node5 [style="filled";
label="node5 172";
id="node5";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node11 [style="filled";
label="node11 175";
id="node11";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node0 -> node2 [penwidth=1;
color="blue";
];
    node2 -> node3 [penwidth=1;
color="blue";
style="invis";
headport="e";
tailport="w";
];
    node5 -> node11 [penwidth=1;
color="blue";
];
}"
`;

exports[`Python: yield_value: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
    node0 [style="filled";
label="node0 180";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node3 [style="filled";
label="node3 181";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node1 [style="filled";
label="node1 182";
id="node1";
shape="hexagon";
fillcolor="deepskyblue";
orientation=90;
height=0.3;
];
    node4 [style="filled";
label="node4 182";
id="node4";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node3 -> node1 [penwidth=1;
color="green";
];
    node1 -> node3 [penwidth=2;
color="blue";
];
    node0 -> node3 [penwidth=1;
color="blue";
];
    node3 -> node4 [penwidth=1;
color="red";
];
}"
`;

exports[`Python: try_except: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
subgraph cluster_0 {
penwidth=0;
color="white";
bgcolor="#ddddff";

subgraph cluster_1 {
penwidth=0;
color="white";
bgcolor="#ddffdd";
    node2 [style="filled";
label="node2 190";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

subgraph cluster_2 {
penwidth=0;
color="white";
bgcolor="#ffdddd";
    node3 [style="filled";
label="node3 192";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

}    node0 [style="filled";
label="node0 188";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node2 [style="filled";
label="node2 190";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 192";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node4 [style="filled";
label="node4 192";
id="node4";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node2 -> node3 [penwidth=1;
color="blue";
style="invis";
headport="e";
tailport="w";
];
    node0 -> node2 [penwidth=1;
color="blue";
];
    node3 -> node4 [penwidth=1;
color="blue";
];
    node2 -> node4 [penwidth=1;
color="blue";
];
}"
`;

exports[`Python: try_except_finally: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
subgraph cluster_0 {
penwidth=0;
color="white";
bgcolor="#ddddff";

subgraph cluster_1 {
penwidth=0;
color="white";
bgcolor="#ddffdd";
    node2 [style="filled";
label="node2 200";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

subgraph cluster_2 {
penwidth=0;
color="white";
bgcolor="#ffdddd";
    node3 [style="filled";
label="node3 202";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

subgraph cluster_3 {
penwidth=0;
color="white";
bgcolor="#ffffdd";
    node4 [style="filled";
label="node4 204";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

}    node0 [style="filled";
label="node0 198";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node2 [style="filled";
label="node2 200";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 202";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node4 [style="filled";
label="node4 204";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node5 [style="filled";
label="node5 204";
id="node5";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node2 -> node3 [penwidth=1;
color="blue";
style="invis";
headport="e";
tailport="w";
];
    node2 -> node4 [penwidth=1;
color="blue";
];
    node3 -> node4 [penwidth=1;
color="blue";
];
    node0 -> node2 [penwidth=1;
color="blue";
];
    node4 -> node5 [penwidth=1;
color="blue";
];
}"
`;

exports[`Python: try_many_except_finally: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
subgraph cluster_0 {
penwidth=0;
color="white";
bgcolor="#ddddff";
    node7 [style="filled";
label="node7 217";
id="node7";
shape="house";
fillcolor="#AB3030";
height=0.5;
];

subgraph cluster_1 {
penwidth=0;
color="white";
bgcolor="#ddffdd";
    node2 [style="filled";
label="node2 212";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

subgraph cluster_2 {
penwidth=0;
color="white";
bgcolor="#ffdddd";
    node3 [style="filled";
label="node3 214";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

subgraph cluster_3 {
penwidth=0;
color="white";
bgcolor="#ffdddd";
    node4 [style="filled";
label="node4 216";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

subgraph cluster_4 {
penwidth=0;
color="white";
bgcolor="#ffdddd";
    node5 [style="filled";
label="node5 217";
id="node5";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

subgraph cluster_5 {
penwidth=0;
color="white";
bgcolor="#ffffdd";
    node8 [style="filled";
label="node8 219";
id="node8";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node6 [style="filled";
label="node6 219";
id="node6";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

}    node0 [style="filled";
label="node0 210";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node2 [style="filled";
label="node2 212";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 214";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node4 [style="filled";
label="node4 216";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node5 [style="filled";
label="node5 217";
id="node5";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node8 [style="filled";
label="node8 219";
id="node8";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node6 [style="filled";
label="node6 219";
id="node6";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node7 [style="filled";
label="node7 217";
id="node7";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node9 [style="filled";
label="node9 219";
id="node9";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node2 -> node3 [penwidth=1;
color="blue";
style="invis";
headport="e";
tailport="w";
];
    node2 -> node4 [penwidth=1;
color="blue";
style="invis";
headport="e";
tailport="w";
];
    node2 -> node5 [penwidth=1;
color="blue";
style="invis";
headport="e";
tailport="w";
];
    node5 -> node6 [penwidth=1;
color="blue";
];
    node6 -> node7 [penwidth=1;
color="blue";
];
    node2 -> node8 [penwidth=1;
color="blue";
];
    node3 -> node8 [penwidth=1;
color="blue";
];
    node4 -> node8 [penwidth=1;
color="blue";
];
    node0 -> node2 [penwidth=1;
color="blue";
];
    node8 -> node9 [penwidth=1;
color="blue";
];
}"
`;

exports[`Python: try_except_else_finally: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
subgraph cluster_0 {
penwidth=0;
color="white";
bgcolor="#ddddff";
    node4 [style="filled";
label="node4 229";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];

subgraph cluster_1 {
penwidth=0;
color="white";
bgcolor="#ddffdd";
    node2 [style="filled";
label="node2 227";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

subgraph cluster_2 {
penwidth=0;
color="white";
bgcolor="#ffdddd";
    node3 [style="filled";
label="node3 228";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

subgraph cluster_3 {
penwidth=0;
color="white";
bgcolor="#ffffdd";
    node5 [style="filled";
label="node5 230";
id="node5";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

}    node0 [style="filled";
label="node0 226";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node2 [style="filled";
label="node2 227";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 228";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node4 [style="filled";
label="node4 229";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node5 [style="filled";
label="node5 230";
id="node5";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node6 [style="filled";
label="node6 230";
id="node6";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node2 -> node3 [penwidth=1;
color="blue";
style="invis";
headport="e";
tailport="w";
];
    node2 -> node4 [penwidth=1;
color="blue";
];
    node4 -> node5 [penwidth=1;
color="blue";
];
    node3 -> node5 [penwidth=1;
color="blue";
];
    node0 -> node2 [penwidth=1;
color="blue";
];
    node5 -> node6 [penwidth=1;
color="blue";
];
}"
`;

exports[`Python: massive_try_except_else_finally: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
subgraph cluster_0 {
penwidth=0;
color="white";
bgcolor="#ddddff";
    node12 [style="filled";
label="node12 245";
id="node12";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node13 [style="filled";
label="node13 246";
id="node13";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node14 [style="filled";
label="node14 248";
id="node14";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node15 [style="filled";
label="node15 248";
id="node15";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node17 [style="filled";
label="node17 251";
id="node17";
shape="box";
fillcolor="lightgray";
height=0.3;
];

subgraph cluster_1 {
penwidth=0;
color="white";
bgcolor="#ddffdd";
    node2 [style="filled";
label="node2 238";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];

subgraph cluster_2 {
penwidth=0;
color="white";
bgcolor="#ddddff";
    node5 [style="filled";
label="node5 237";
id="node5";
shape="box";
fillcolor="lightgray";
height=0.3;
];

subgraph cluster_3 {
penwidth=0;
color="white";
bgcolor="#ddffdd";
    node3 [style="filled";
label="node3 235";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

subgraph cluster_4 {
penwidth=0;
color="white";
bgcolor="#ffdddd";
    node4 [style="filled";
label="node4 236";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

subgraph cluster_5 {
penwidth=0;
color="white";
bgcolor="#ffffdd";
    node6 [style="filled";
label="node6 238";
id="node6";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

}

}

subgraph cluster_6 {
penwidth=0;
color="white";
bgcolor="#ffdddd";
    node7 [style="filled";
label="node7 243";
id="node7";
shape="box";
fillcolor="lightgray";
height=0.3;
];

subgraph cluster_7 {
penwidth=0;
color="white";
bgcolor="#ddddff";
    node10 [style="filled";
label="node10 242";
id="node10";
shape="box";
fillcolor="lightgray";
height=0.3;
];

subgraph cluster_8 {
penwidth=0;
color="white";
bgcolor="#ddffdd";
    node8 [style="filled";
label="node8 240";
id="node8";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

subgraph cluster_9 {
penwidth=0;
color="white";
bgcolor="#ffdddd";
    node9 [style="filled";
label="node9 241";
id="node9";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

subgraph cluster_10 {
penwidth=0;
color="white";
bgcolor="#ffffdd";
    node11 [style="filled";
label="node11 243";
id="node11";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

}

}

subgraph cluster_11 {
penwidth=6;
color="white";
bgcolor="#ddddff";

subgraph cluster_12 {
penwidth=0;
color="white";
bgcolor="#ddffdd";
    node18 [style="filled";
label="node18 250";
id="node18";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

subgraph cluster_13 {
penwidth=0;
color="white";
bgcolor="#ffffdd";
    node19 [style="filled";
label="node19 251";
id="node19";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

}

subgraph cluster_14 {
penwidth=0;
color="white";
bgcolor="#ffffdd";
    node20 [style="filled";
label="node20 253";
id="node20";
shape="box";
fillcolor="lightgray";
height=0.3;
];

subgraph cluster_15 {
penwidth=0;
color="white";
bgcolor="#ffddff";
    node23 [style="filled";
label="node23 254";
id="node23";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node21 [style="filled";
label="node21 255";
id="node21";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node22 [style="filled";
label="node22 255";
id="node22";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node23 -> node21 [penwidth=1;
color="green";
];
    node21 -> node23 [penwidth=2;
color="blue";
];
    node23 -> node22 [penwidth=1;
color="red";
];

}

}
    node12 -> node13 [penwidth=1;
color="green";
];
    node13 -> node15 [penwidth=1;
color="blue";
];
    node12 -> node14 [penwidth=1;
color="red";
];
    node14 -> node15 [penwidth=1;
color="blue";
];

}    node0 [style="filled";
label="node0 233";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node3 [style="filled";
label="node3 235";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node4 [style="filled";
label="node4 236";
id="node4";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node5 [style="filled";
label="node5 237";
id="node5";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node8 [style="filled";
label="node8 240";
id="node8";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node6 [style="filled";
label="node6 238";
id="node6";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node9 [style="filled";
label="node9 241";
id="node9";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node10 [style="filled";
label="node10 242";
id="node10";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node2 [style="filled";
label="node2 238";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node11 [style="filled";
label="node11 243";
id="node11";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node7 [style="filled";
label="node7 243";
id="node7";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node12 [style="filled";
label="node12 245";
id="node12";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node20 [style="filled";
label="node20 253";
id="node20";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node13 [style="filled";
label="node13 246";
id="node13";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node14 [style="filled";
label="node14 248";
id="node14";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node23 [style="filled";
label="node23 254";
id="node23";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node15 [style="filled";
label="node15 248";
id="node15";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node21 [style="filled";
label="node21 255";
id="node21";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node22 [style="filled";
label="node22 255";
id="node22";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node18 [style="filled";
label="node18 250";
id="node18";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node19 [style="filled";
label="node19 251";
id="node19";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node24 [style="filled";
label="node24 255";
id="node24";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node17 [style="filled";
label="node17 251";
id="node17";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 -> node4 [penwidth=1;
color="blue";
style="invis";
headport="e";
tailport="w";
];
    node3 -> node5 [penwidth=1;
color="blue";
];
    node5 -> node6 [penwidth=1;
color="blue";
];
    node4 -> node6 [penwidth=1;
color="blue";
];
    node6 -> node2 [penwidth=1;
color="blue";
];
    node8 -> node9 [penwidth=1;
color="blue";
style="invis";
headport="e";
tailport="w";
];
    node8 -> node10 [penwidth=1;
color="blue";
];
    node10 -> node11 [penwidth=1;
color="blue";
];
    node9 -> node11 [penwidth=1;
color="blue";
];
    node11 -> node7 [penwidth=1;
color="blue";
];
    node3 -> node8 [penwidth=1;
color="blue";
style="invis";
headport="e";
tailport="w";
];
    node18 -> node19 [penwidth=1;
color="blue";
];
    node19 -> node17 [penwidth=1;
color="blue";
];
    node15 -> node18 [penwidth=1;
color="blue";
];
    node20 -> node23 [penwidth=1;
color="blue";
];
    node17 -> node20 [penwidth=1;
color="blue";
];
    node7 -> node20 [penwidth=1;
color="blue";
];
    node0 -> node3 [penwidth=1;
color="blue";
];
    node2 -> node12 [penwidth=1;
color="blue";
];
    node22 -> node24 [penwidth=1;
color="blue";
];
}"
`;

exports[`Python: try_finally: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
subgraph cluster_0 {
penwidth=0;
color="white";
bgcolor="#ddddff";
    node8 [style="filled";
label="node8 263";
id="node8";
shape="house";
fillcolor="#AB3030";
height=0.5;
];

subgraph cluster_1 {
penwidth=0;
color="white";
bgcolor="#ddffdd";
    node2 [style="filled";
label="node2 262";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node3 [style="filled";
label="node3 263";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node6 [style="filled";
label="node6 263";
id="node6";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node2 -> node3 [penwidth=1;
color="green";
];
    node2 -> node6 [penwidth=1;
color="red";
];

}

subgraph cluster_2 {
penwidth=0;
color="white";
bgcolor="#ffffdd";
    node7 [style="filled";
label="node7 266";
id="node7";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node9 [style="filled";
label="node9 266";
id="node9";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

}    node0 [style="filled";
label="node0 260";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node2 [style="filled";
label="node2 262";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node3 [style="filled";
label="node3 263";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node7 [style="filled";
label="node7 266";
id="node7";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node6 [style="filled";
label="node6 263";
id="node6";
shape="box";
fillcolor="lightgray";
height=0.6;
];
    node8 [style="filled";
label="node8 263";
id="node8";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node9 [style="filled";
label="node9 266";
id="node9";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node10 [style="filled";
label="node10 266";
id="node10";
shape="house";
fillcolor="#AB3030";
height=0.6;
];
    node3 -> node7 [penwidth=1;
color="blue";
];
    node7 -> node8 [penwidth=1;
color="blue";
];
    node6 -> node9 [penwidth=1;
color="blue";
];
    node0 -> node2 [penwidth=1;
color="blue";
];
    node9 -> node10 [penwidth=1;
color="blue";
];
}"
`;

exports[`Python: try_with_finally: DOT Snapshot 1`] = `
"digraph "" {
    node [shape=box];
    edge [headport=n tailport=s]
    bgcolor="transparent"
subgraph cluster_0 {
penwidth=0;
color="white";
bgcolor="#ddddff";
    node6 [style="filled";
label="node6 274";
id="node6";
shape="house";
fillcolor="#AB3030";
height=0.5;
];

subgraph cluster_1 {
penwidth=0;
color="white";
bgcolor="#ddffdd";
    node2 [style="filled";
label="node2 273";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];

subgraph cluster_2 {
penwidth=0;
color="white";
bgcolor="#ffddff";
    node3 [style="filled";
label="node3 274";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

}

subgraph cluster_3 {
penwidth=0;
color="white";
bgcolor="#ffffdd";
    node5 [style="filled";
label="node5 277";
id="node5";
shape="box";
fillcolor="lightgray";
height=0.3;
];

}

}    node0 [style="filled";
label="node0 271";
id="node0";
shape="invhouse";
fillcolor="#48AB30";
height=0.5;
];
    node2 [style="filled";
label="node2 273";
id="node2";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node3 [style="filled";
label="node3 274";
id="node3";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node5 [style="filled";
label="node5 277";
id="node5";
shape="box";
fillcolor="lightgray";
height=0.3;
];
    node6 [style="filled";
label="node6 274";
id="node6";
shape="house";
fillcolor="#AB3030";
height=0.5;
];
    node2 -> node3 [penwidth=1;
color="blue";
];
    node3 -> node5 [penwidth=1;
color="blue";
];
    node5 -> node6 [penwidth=1;
color="blue";
];
    node0 -> node2 [penwidth=1;
color="blue";
];
}"
`;
